--- a/style.css
+++ b/style.css
@@ -3,4 +3,67 @@ body {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    margin: 0;
+}
+
+.controls {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 100%
+}
+
+label {
+    white-space: nowrap;
+}
+
+button {
+    height: 25px;
+    background-color: #4CAF50;
+    color: #fff;
+    border: none;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+    cursor: pointer;
+}
+
+input, button {
+    margin: 10px;
+}
+
+button:hover {
+    opacity: 1;
+}
+
+input[type='range'] {
+    -webkit-appearance: none;
+    width: 100%;
+    height: 25px;
+    background: #d3d3d3;
+    outline: none;
+    opacity: 0.7;
+    -webkit-transition: .2s;
+    transition: opacity .2s;
+}
+
+input[type='range']:hover {
+    opacity: 1;
+}
+
+input[type='range']::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
+}
+
+input[type='range']::-moz-range-thumb {
+    width: 25px;
+    height: 25px;
+    background: #4CAF50;
+    cursor: pointer;
 }
